--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <div id="schedule"></div>
+      <!-- all the hour elements here-->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
