--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- all the hour elements here-->
+      <!-- the schedule goes here-->
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="moment.js"></script>
+    <script src="https://momentjs.com/downloads/moment.js"></script>
     <script src="./assets/script.js"></script>
   </body>
 </html>
